--- a/index.html
+++ b/index.html
@@ -1,56 +1,15 @@
+<title>
+    Simon the Downs Poems
+</title>
 
-<text>
-# 🌟 Simon the Balding Man 🌟<br><br>
-
-In a quaint little town where the ☀ sun brightly beams,<br>
-Lived a fellow named **Simon**, or so go the dreams.<br>
-With a head that was shiny, like a polished old stone,<br>
-He prided his thoughts, for he wasn’t alone.<br>
-
-His hair had long fled, like a thief in the night,<br>
-Leaving behind just a glimmering sight.<br>
-But Simon, undaunted, would stride with a grin,<br>
-For his heart was a 💖 fountain, and his chatter a din.<br>
-
-“Oh, have you heard?” he would start with delight,<br>
-As he gathered the neighbors from morning till night.<br>
-“The weather’s quite lovely, a fine day for ☕ tea,<br>
-And did you see Janet? She’s knitting a spree!”<br>
-
-With tales of the garden and gossip galore,<br>
-He’d talk of the postman, the 🐱 cat, and much more.<br>
-Each word was a river 🌊 , a torrent of sound,<br>
-In the heart of the town, he was joyfully found.<br>
-
-“Have you heard of the baker 🍞 , the one with the pies?<br>
-They say he’s a wizard beneath all those flies! 🧙♂<br> 
-He conjures up pastries that dance on your tongue,<br>
-A marvel of flavors 🎉 , where happiness sprung.”<br>
-
-But as Simon would chatter, the hours drifted by ⏳ ,<br>
-And some neighbors would nod 🤔 , while others would sigh. 😌<br> 
-They loved him, of course, for his spirit was bright ✨ ,<br>
-Yet longed for the silence that followed his light.<br>
-
-One sunny afternoon ☀ , as he ventured to chat,<br>
-He spied an old friend 👥 , a fellow named Pat.<br> 
-“Pat, dear old chum! Oh, come sit with me here 🤗 ,<br>
-I’ve stories of fortune 💰 , of laughter 😂 , and cheer!”<br> 
-
-But Pat had grown weary of Simon’s long tales 📖 ,<br> 
-Of weather and gossip 🗣 , of cats and of snails. 🐌<br><br>
-With a smile that was gentle 😊 , he raised up his hand ✋ ,<br> 
-“Simon, my friend 🤝 , let’s not make this so grand.”<br> 
-
-“Sometimes words are like rivers that flow without cease 🌊 ,<br> 
-But silence can nurture 🌱<br>a delicate peace.”<br> 
-Simon paused for a moment ⏸ , took stock of his friend 👀 ,<br> 
-And pondered the wisdom that Pat did extend.<br>
-
-He thought of the laughter 😂 , the joy he would bring 🎈 ,<br><br>
-But also of moments when silence could sing 🎶 .<br><br>
-So he took a deep breath 💨<br>and with a nod and a grin 😊 ,<br><br>
-He let the soft hush 🤫<br>of the evening creep in.<br><br>
-
-
-</text>
+ <article>
+  <header>
+    <h1>Poems about Simon the downs</h1>
+    <p>Posted by his dad</p>
+    <p>Some awe-inspiring and breathtaking poems about Simon are listed bellow</p>
+  </header>
+  <h1>So you might ask what is the defination of down syndrome</h1>
+   <a href="definationofdownsyndrome.html"><h1>Find out for yourself</h1></a> 
+   <a href="goodboy.html"><h1>Click This</h1></a>
+   <a href="long poem1.html"><h1>A long poem about Simon bald head and his talkative ways</h1></a>
+</article> 
