--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <h1>So you might ask what is the defination of down syndrome</h1>
    <a href="definationofdownsyndrome.html"><h1>Find out for yourself</h1></a> 
    <a href="goodboy.html"><h1>Click This</h1></a>
-   <a href="long poem1.html"><h1>A long poem about Simon bald head and his talkative ways</h1></a>
+   <a href="long poem1.html"><h1>A poem about Simon's bald head and his talkative ways</h1></a>
+   <a href="downs poem.html"><h1>A poem about Simon's 47 chromosomes</h1></a>
 </article> 
