--- a/long poem1.html
+++ b/long poem1.html
@@ -1,7 +1,5 @@
-
+<h1>🌟 Simon the Balding Man 🌟</h1>
 <text>
-# 🌟 Simon the Balding Man 🌟<br><br>
-
 In a quaint little town where the ☀ sun brightly beams,<br>
 Lived a fellow named **Simon**, or so go the dreams.<br>
 With a head that was shiny, like a polished old stone,<br>
